# Capstone

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  main.cpp
capstone/: CMakeLists.txt
capstone_tests/: CMakeLists.txt
capstone_tests/tests/: CMakeLists.txt  sample_test.cpp
cdti/: CMakeLists.txt
cdti/CDTIUnity/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CDTIUnity.CSharp.csproj  CDTIUnity.sln  log.txt  temp.txt
cdti/ProtobufTcasDemo/: ProtobufTcasDemo.sln
cdti/app/: CMakeLists.txt  main.cpp
cdti/src/: CMakeLists.txt  foo.h
cdti/test/: CMakeLists.txt
cdti/tests/: CMakeLists.txt  cdti_test.cpp
doc/html/: _actual_flights_i_o_8h_source.html  _adsb_receiver_8h_source.html  _adsb_simulator_8cpp.html  _adsb_simulator_8h.html  _adsb_simulator_8h_source.html  _aircraft_8h_source.html  _aircraft_tests_8cpp.html  _categorizer_8h_source.html  _client_8h_source.html  _client_socket_8h_source.html  _cluster_8cpp.html  _cluster_8h.html  _cluster_8h_source.html  _correlation_aircraft_8cpp.html  _correlation_aircraft_8h.html  _correlation_aircraft_8h_source.html  _correlation_engine_8cpp.html  _correlation_engine_8h.html  _correlation_engine_8h_source.html  _detection_device_simulator_8cpp.html  _detection_device_simulator_8h.html  _detection_device_simulator_8h_source.html  _device_8h_source.html  _device_receiver_8h_source.html  _device_simulator_8cpp.html  _device_simulator_8h.html  _device_simulator_8h_source.html  _flight_8cpp.html  _flight_8h_source.html  _flight_leg_8h_source.html  _flight_leg_tests_8cpp.html  _flight_plan_8h_source.html  _flight_plan_tests_8cpp.html  _flight_report_8h_source.html  _flight_scenario_8h_source.html  _flight_scenario_i_o_8h_source.html  _flight_scenario_tests_8cpp.html  _flight_simulation_8h_source.html  _generation_math_8h_source.html  _generator_8h_source.html  (+415 more)
doc/latex/: _adsb_simulator_8cpp.tex  _adsb_simulator_8h.tex  _aircraft_tests_8cpp.tex  _cluster_8cpp.tex  _cluster_8h.tex  _correlation_aircraft_8cpp.tex  _correlation_aircraft_8h.tex  _correlation_engine_8cpp.tex  _correlation_engine_8h.tex  _detection_device_simulator_8cpp.tex  _detection_device_simulator_8h.tex  _device_simulator_8cpp.tex  _device_simulator_8h.tex  _flight_8cpp.tex  _flight_leg_tests_8cpp.tex  _flight_plan_tests_8cpp.tex  _flight_scenario_tests_8cpp.tex  _history_8cpp.tex  _history_8h.tex  _history_test_8cpp.tex  _ownship_simulator_8cpp.tex  _ownship_simulator_8h.tex  _prediction_8cpp.tex  _prediction_8h.tex  _prediction_test_8cpp.tex  _radar_simulator_8cpp.tex  _radar_simulator_8h.tex  _server_8cpp.tex  _server_8h.tex  _snapshot_8cpp.tex  _snapshot_8h.tex  _snapshot_test_8cpp.tex  _socket_8cpp.tex  _socket_8h.tex  _surveillance_report_8cpp.tex  _surveillance_report_8h.tex  _tail_number_8h.tex  _tcas_simulator_8cpp.tex  _tcas_simulator_8h.tex  _velocity_8h.tex  (+231 more)
gp/: CMakeLists.txt  adsb.proto  cdti.proto  tcas.proto
lib/: CMakeLists.txt
lib/gp/: CMakeLists.txt  message.proto  ownship.proto  radar.proto
lib/gtest-1.7.0/: CMakeLists.txt
lib/jsoncpp/: CMakeLists.txt
lib/jsonio/: CMakeLists.txt
lib/jsonio/test/: CMakeLists.txt  FinalSim.json  FlightScenarioInput.json  FlightSimulation.json  actual_flights_tests.cpp  flight_scenario_tests.cpp  simulation_flights_tests.cpp
lib/network/: CMakeLists.txt
lib/util/: CMakeLists.txt
lib/util/src/: ActualFlight.cpp  ActualFlights.cpp  ActualReport.cpp  Aircraft.cpp  CMakeLists.txt  EmptySphericalCoordinate.cpp  Flight.cpp  FlightLeg.cpp  FlightPlan.cpp  FlightReport.cpp  FlightScenario.cpp  FlightScenario.h  FlightSimulation.cpp  GenerationMath.cpp  GeographicCoordinate.cpp  Heading.cpp  IntruderID.cpp  RadarID.cpp  SimulatedFlight.cpp  SpecialMath.cpp  SphericalCoordinate.cpp  TailNumber.cpp  TcasID.cpp  Vector.cpp  Velocity.cpp  vector.cpp
lib/util/test/: AircraftTests.cpp  CMakeLists.txt  FlightLegTests.cpp  FlightPlanTests.cpp  FlightReportTests.cpp  FlightScenarioTests.cpp  FlightTests.cpp  GenerationMathTests.cpp  GeographicCoordinateTests.cpp  RadarIDTests.cpp  SpecialMathTests.cpp  SphericalCoordinateTests.cpp  TailNumberTests.cpp  TcasIDTests.cpp  VectorTests.cpp  VelocityTests.cpp  vector_tests.cpp
saap/: CMakeLists.txt
saap/algorithm/: CMakeLists.txt
saap/algorithm/inc/: Cluster.h  ClusterConverter.h  CorrelationAircraft.h  CorrelationEngine.h  Correlator.h  FakeCorrelator.h  History.h  Prediction.h  Snapshot.h
saap/algorithm/src/: CMakeLists.txt  Cluster.cpp  ClusterConverter.cpp  CorrelationAircraft.cpp  CorrelationEngine.cpp  FakeCorrelator.cpp  History.cpp  Prediction.cpp  Snapshot.cpp
saap/algorithm/test/: AverageTests.cpp  CMakeLists.txt  DistanceTest.cpp  DistanceTests.cpp  HistoryTest.cpp  MainFunctionalityTests.cpp  ObjectPoolTests.cpp  PredictionTest.cpp  SnapshotTest.cpp
saap/app/: CMakeLists.txt  Client.cpp  SimulationReport.cpp  SimulationReport.h  main.cpp
saap/categorization/: CMakeLists.txt
saap/categorizer/: CMakeLists.txt
saap/categorizer/test/: CMakeLists.txt  CategorizerTest.cpp
saap/processor/src/: CMakeLists.txt  Processor.cpp
saap/receiver/: CMakeLists.txt
saap/receiver/inc/: AdsbReceiver.h  Client.h  DeviceReceiver.h  OwnshipReceiver.h  ProcessorLogger.h  RadarReceiver.h  ReceivedReports.h  ReportReceiver.h  SurveillanceReport.h  TcasReceiver.h
saap/receiver/src/: AdsbReceiver.cpp  CMakeLists.txt  Client.cpp  DeviceReceiver.cpp  OwnshipReceiver.cpp  ProcessorLogger.cpp  RadarReceiver.cpp  ReceivedReports.cpp  ReportReceiver.cpp  SurveillanceReport.cpp  TcasReceiver.cpp
saap/receiver/test/: CMakeLists.txt  ReceivedReportsTests.cpp  ReportReceiverTests.cpp
saap/reportReceiver/: CMakeLists.txt
saap/reportReceiver/inc/: ReportReceiver.h  SurveillanceReport.h
saap/reportReceiver/src/: CMakeLists.txt  Client.cpp  ReportReceiver.cpp  SimulationReport.cpp  SurveillanceReport.cpp
saap/reportReceiver/test/: CMakeLists.txt  ReportReceiverTests.cpp
saap/src/: CMakeLists.txt  foo.cpp
saap/src/algorithm/: Cluster.cpp  Cluster.h  Prediction.cpp  Prediction.h
saap/src/reportReceiver/: SimulationReport.h
sim/: CMakeLists.txt
(+273 files in other folders)
