include_directories(${PROJECT_SOURCE_DIR}/src)
include_directories(${gtest_SOURCE_DIR}/inc ${gtest_SOURCE_DIR})
add_executable(run_flight_scenario_tests flight_scenario_tests.cpp)
add_executable(run_actual_flights_tests actual_flights_tests.cpp)
add_executable(run_simulation_flights_tests simulation_flights_tests.cpp)
target_link_libraries(run_flight_scenario_tests gtest gtest_main jsonio_lib)
target_link_libraries(run_actual_flights_tests gtest_main jsonio_lib)
target_link_libraries(run_simulation_flights_tests gtest_main jsonio_lib)