include_directories(${PROJECT_SOURCE_DIR}/src)
include_directories(${gtest_SOURCE_DIR}/inc ${gtest_SOURCE_DIR})
file(GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
add_executable(run_report_receiver_test ${SOURCE_FILES})
target_link_libraries(run_report_receiver_test gtest gtest_main receiver_lib)